argocd/infra3/prometheus/server_ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-server
  namespace: prometheus
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`prometheus.mushroomkingdom.io`)
      services:
        - name: prometheus-server
          port: 80
